# Blade-rocking-and-creeping-test-management-system-

./: .env.assembly.example  .env.oh.example  .gitignore  AGENTS.md  Blade Rocking & Creep Test Flow.docx  CLAUDE.md  HPTR_96-16-040.xls  Makefile  README.md  docker-compose.assembly.yml  docker-compose.oh-ports.yml  docker-compose.oh.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260529_initial_schema.py  20260601_add_blade_type.py  20260616_add_sent_to_assembly_batch_event.py  20260625_135403_assembly_workflow.py  20260708_add_slots_allocated_batch_event.py  20260712_serial_number_per_batch_type.py  20260714_remove_height_dti_positions.py  20260714_work_order_replaces_batch_number.py  20260716_175052_add_ocr_detection_fields_to_attachments.py  20260717_add_hptr_lifecycle_batch_events.py  20260719_lptr_two_stage_balancing.py  20260721_drop_blade_nomenclature.py  20260721_drop_rejection_reasons.py  20260722_add_returned_to_oh_batch_events.py  20260723_add_rocking_creep_complete.py
backend/app/: main.py  worker.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: assembly.py  audit_logs.py  auth.py  batches.py  blades.py  dti.py  lptr_balancing.py  measurements.py  notifications.py  ocr.py  reports.py  slots.py  stations.py  sync.py  users.py  weighing.py  work_orders.py  workflows.py
backend/app/core/: config.py  constants.py  dependencies.py  jwt_blacklist.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: audit.py  rate_limit.py
backend/app/models/: __init__.py  assembly_blade_record.py  assembly_receipt.py  attachment.py  audit_log.py  base.py  batch_event.py  batch_group.py  blade.py  enums.py  lptr_balancing_check.py  lptr_empty_rotor_reading.py  lptr_manual_correction.py  measurement.py  notification.py  report.py  slot_allocation.py  user.py  work_order.py  work_order_event.py  workflow.py
backend/app/notifications/: events.py  manager.py  service.py
backend/app/ocr/: base.py  mock_provider.py  paddle_provider.py  registry.py  tesseract_provider.py
backend/app/reports/: generator.py  tasks.py
backend/app/repositories/: __init__.py  assembly_repository.py  base.py  blade_repository.py  measurement_repository.py  slot_repository.py  user_repository.py  work_order_repository.py
backend/app/schemas/: __init__.py  assembly.py  assembly_receipt.py  base.py  blade.py  lptr_balancing.py  measurement.py  notification.py  report.py  slot_allocation.py  user.py  work_order.py  workflow.py
backend/app/services/: assembly_service.py  blade_service.py  excel_import.py  weighing_service.py  work_order_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_auth.py  test_batches.py  test_blades.py  test_rbac.py  test_slots.py  test_work_orders.py
backend/app/tests/unit/: test_excel_import.py  test_workflow.py
backend/app/utils/: file_utils.py  pagination.py
backend/app/workflows/: __init__.py  state_machine.py
docs/: DEPLOYMENT.md  TECHNICAL_DESIGN.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BalancingSuggestion.tsx  ModifyBladesPanel.tsx
frontend/src/components/common/: CameraModal.tsx  CameraScanner.tsx  CustomIcons.tsx  ErrorBoundary.tsx  KTIcon.tsx  PageHeader.tsx  RouteErrorBoundary.tsx  RussianKeyboard.tsx  StatusBadge.tsx
frontend/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  select.tsx  switch.tsx
frontend/src/hooks/: useDTISocket.ts  useWeighingSocket.ts
frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/src/layouts/components/: AuthLayout.tsx  SideBarMenu.tsx
frontend/src/layouts/components/Navbar/: Footer.tsx  Navbar.tsx  NotificationsDropdown.tsx
frontend/src/pages/: AcceptBatchPage.tsx  AssemblyQueuePage.tsx  AssemblyVerificationPage.tsx  BatchTrackingPage.tsx  BladeDetailPage.tsx  BladeEntryPage.tsx  DashboardPage.tsx  LoginPage.tsx  ModifyBatchPage.tsx  MyProfile.tsx  NotificationsPage.tsx  OHQueuePage.tsx  OHSlotAllocationPage.tsx  QaDashboardPage.tsx  ReportsPage.tsx  RockingCreepPage.tsx  SettingsPage.tsx  SlotAllocationPage.tsx  UserManagementPage.tsx  WorkflowTimelinePage.tsx
frontend/src/pages/blade-entry/: BladeEntryGrid.tsx  CompleteWorkOrderDialog.tsx  ExcelImportButton.tsx  ExcelImportResultDialog.tsx  GridRow.tsx  WorkOrderCommonInfoForm.tsx
frontend/src/pages/blade-entry/cells/: MeltNumberCell.tsx  ReadOnlyCell.tsx  WeightCell.tsx
frontend/src/pages/blade-entry/hooks/: useGridKeyboardNav.ts
frontend/src/routes/: index.tsx
frontend/src/services/: api.ts  assemblyService.ts  authService.ts  batchService.ts  bladeService.ts  lptrService.ts  notificationService.ts  oak1Camera.ts  ocrService.ts  reportService.ts  slotService.ts  userService.ts  workOrderService.ts  workflowService.ts
frontend/src/store/: authStore.ts  bladeEntryStore.ts  notificationStore.ts  uiStore.ts
frontend/src/types/: assembly.ts  index.ts
frontend/src/utils/: balancing.ts  hptrBalancing.ts  lptrBalancing.ts
nginx/: nginx.conf
scripts/: deploy.sh  dti_bridge.py  import_hptr_0083.py  import_hptr_16_96_317.py  import_hptr_96_16_040.py  manage_batches.py  oak1_camera_service.py  oak1_ocr_test.py  oak1_requirements.txt  register_bridge_tasks.ps1  reset_and_seed_full.py  seed_data.py  seed_demo_data.py  weighing_bridge.py
