[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blade-rocking-backend"
version = "1.0.0"
description = "Blade Rocking & Creep Test Management System — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Meridian Data Labs", email = "amit@meridiandatalabs.com" },
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # Settings / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    # File uploads
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    # Celery
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    # Reporting
    "openpyxl>=3.1.2",
    "reportlab>=4.2.0",
    # Logging
    "structlog>=24.2.0",
    # HTTP client (for webhooks / external APIs)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "pyzbar>=0.1.9",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",        # async test client
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "anyio>=4.4.0",
]
lint = [
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "types-aiofiles>=23.2.0",
]

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: fast, isolated unit tests (no database, no network)",
    "integration: tests that require a live database or external service",
    "e2e: end-to-end tests that spin up the full application",
    "slow: tests that take more than a few seconds",
    "ocr: tests that require pytesseract and the Tesseract binary",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

# ============================================================
# Ruff (linter + formatter)
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["app", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "G",    # flake8-logging-format
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ERA",  # eradicate (commented-out code)
]
ignore = [
    "ANN101",  # missing-type-self (deprecated rule)
    "ANN102",  # missing-type-cls
    "ANN401",  # dynamically-typed-expressions (Any) — needed in generic code
    "EM101",   # raw-string-in-exception — acceptable in small projects
    "EM102",   # f-string-in-exception
    "S101",    # assert used — fine in tests
    "PLR0913", # too-many-arguments — FastAPI routes often need many params
    "PLR2004", # magic-value-comparison — acceptable for HTTP status codes
    "B008",    # function-call-in-default-argument — required by FastAPI Depends
    "RUF012",  # mutable class variables — handled by Pydantic/SQLAlchemy
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # annotations not required in tests
    "S",      # security rules relaxed in tests
    "PLR",    # pylint refactoring hints not required in tests
    "ERA001", # commented-out code often intentional in tests
]
"alembic/**/*.py" = [
    "ANN",
    "ERA001",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# mypy
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Third-party packages that do not ship type stubs.
[[tool.mypy.overrides]]
module = [
    "pytesseract.*",
    "pyzbar.*",
    "zxing.*",
    "reportlab.*",
    "openpyxl.*",
    "celery.*",
    "kombu.*",
    "structlog.*",
]
ignore_missing_imports = true

# Alembic-generated migration files are not fully typed.
[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/db/migrations/*",
    "alembic/*",
    "alembic/versions/*",
    "tests/*",
    "**/__init__.py",
    "**/conftest.py",
]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
